apps/app-proxy/overlays/codefreshruntime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefreshruntime-cap-app-proxy
  namespace: codefreshruntime
spec:
  ingressClassName: nginx
  rules:
  - host: 10.98.167.75
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
